--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -272,6 +272,15 @@ construct==2.10.56
 # homeassistant.components.coronavirus
 coronavirus==1.1.1
 
+# homeassistant.components.crownstone
+crownstone-cloud==1.4.5
+
+# homeassistant.components.crownstone
+crownstone-sse==2.0.0
+
+# homeassistant.components.crownstone
+crownstone-uart==2.0.0
+
 # homeassistant.components.datadog
 datadog==0.15.0
 
@@ -593,6 +602,7 @@ nuheat==0.3.0
 numato-gpio==0.10.0
 
 # homeassistant.components.compensation
+# homeassistant.components.crownstone
 # homeassistant.components.iqvia
 # homeassistant.components.opencv
 # homeassistant.components.tensorflow
@@ -985,6 +995,7 @@ pyruckus==0.12
 pyserial-asyncio==0.5
 
 # homeassistant.components.acer_projector
+# homeassistant.components.crownstone
 # homeassistant.components.zha
 pyserial==3.5
 
